[1114] Ported from bd11e0d81e900a1fc41842dcb52df614a63cea5f
[452] DSI integration completed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -144,6 +144,8 @@ en:
             reason:
               blank: "^Why do they need access?"
   errors:
+    messages:
+      email: "^Enter an email address in the correct format, like name@example.com"
     "400":
       title: BAD REQUEST
       detail: "%{message}"
