--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,8 @@
 en:
   service_name: "Teacher Training API Admin"
+  header:
+    items:
+      sign_out: "Sign out"
   course:
     update_email:
       name: "title"
