[1242] Add page title for providers index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,9 @@ en:
       sign_in:
         index: Sign in
         new: User not found
+      support:
+        providers:
+          index: Providers
   course:
     update_email:
       name: "title"
