[1314] Provider lookup supporting name or code

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,8 @@ en:
       support:
         providers:
           index: Providers
+    filter:
+      text_search: Name or code
   course:
     update_email:
       name: "title"
