[1320] Add courses view to providers sub menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,8 @@ en:
       support:
         providers:
           index: Providers
+          courses:
+            index: Courses
     filter:
       text_search: Name or code
   course:
