--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,8 @@ en:
           index: Providers
           courses:
             index: Courses
+        users:
+          index: Users
     filter:
       text_search: Name or code
   course:
