[1317] Add edit view, controller actions, and error messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,8 @@ en:
   header:
     items:
       sign_out: "Sign out"
+  cancel: "Cancel"
+  change: "Change"
   components:
     page_titles:
       sign_in:
@@ -139,6 +141,9 @@ en:
               blank: "^Enter a course length"
         provider:
           attributes:
+            provider_name:
+              taken: "You must enter a unique provider name"
+              too_long: "Your provider name is too long, it must be fewer than 100 characters"
             email:
               blank: "^Enter email address"
             website:
