--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
             index: Courses
         users:
           index: Users
+        data_exports:
+          index: Data exports
     filter:
       text_search: Name or code
   course:
