[1427] Show a list of the providers a user has access to

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,7 @@ en:
             index: Courses
         users:
           index: Users
+          show: User overview
         data_exports:
           index: Data exports
     filter:
