Add validation for visa sponsorship
When a course is published check that the provider has declared whether
they can sponsor visas or not, starting with recruitment cycle 2022.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,6 +119,8 @@ en:
               blank: "^You must say when applications open from"
             base:
               duplicate: "This course already exists. You should add further locations for this course to the existing profile in Publish"
+            provider:
+              visa_sponsorship_not_publishable: "You must say whether your provider can sponsor visas"
         course_enrichment:
           attributes:
             salary_details:
