--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,8 +119,7 @@ en:
               blank: "^You must say when applications open from"
             base:
               duplicate: "This course already exists. You should add further locations for this course to the existing profile in Publish"
-            provider:
-              visa_sponsorship_not_publishable: "You must say whether your provider can sponsor visas"
+              visa_sponsorship_not_publishable: "You must say whether you can sponsor visas"
         course_enrichment:
           attributes:
             salary_details:
