[2299] Add persona login
- Add dfe_signin and persona mode logic to the authentication_service
- Add persona view
- Add admin persona component button
- Add logic to the view which displays sign in if mode == dfe_signin
- Add logic to the view which displays persona if mode == persona
- Add logic to omniauth for new auth if AuthenticationService.persona?
- Add Persona controller with conditional if mode == persona
- Add persona routes and logic to use persona route if mode == persona
- Add sign_out logic to make signout button work
- Add admin persona details to Settings
- Add basic auth (disabled by default)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
       sign_in:
         index: "Sign in"
         new: "User not found"
+        personas: Teacher Training API Personas
       support:
         providers:
           index: "Providers"
