[320] Set up AllocationUplift controller with CRU

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,8 @@ en:
           show: "User overview"
         allocations:
           index: "Allocations"
+        allocation_uplifts:
+          edit: "Edit Allocation Uplift"
         data_exports:
           index: "Data exports"
     filter:
