[369] Add edit/update to allocation support console

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,7 @@ en:
           show: "User overview"
         allocations:
           index: "Allocations"
+          edit: "Edit Allocation"
         allocation_uplifts:
           edit: "Edit Allocation Uplift"
         data_exports:
