[603] Add backlinks, page titles and environment headers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,14 +14,19 @@ en:
       support:
         providers:
           index: "Providers"
+          new: "Add a provider"
+          show: "View a provider"
           courses:
             index: "Courses"
         users:
           index: "Users"
           show: "User overview"
+          new: "Add a user"
         allocations:
           index: "Allocations"
+          show: "Allocation overview"
         allocation_uplifts:
+          new: "Create an Allocation Uplift"
           edit: "Edit Allocation Uplift"
         data_exports:
           index: "Data exports"
