Add separate layouts for Publish and Support
As Publish is gradually merged into TTAPI, we'll have two quite distinct
user interfaces in the app - one for Publish, the other for Support.

Rework the layout files to reflect this need.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 en:
   service_name: "Teacher Training API Admin"
+  publish_service_name: "Publish teacher training"
   header:
     items:
       sign_out: "Sign out"
