[0366] Added presence validation for course code

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,6 +104,9 @@ en:
               blank: "is missing"
         course:
           attributes:
+            course_code: 
+              taken: "Course code is already taken"
+              blank: "Course code cannot be blank"
             level:
               blank: "^Select a course level"
             qualification:
