--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -190,15 +190,15 @@ en:
         access_request:
           attributes:
             first_name:
-              blank: "^Enter your first name"
+              blank: "^Enter a first name"
             last_name:
-              blank: "^Enter your last name"
+              blank: "^Enter a last name"
             email_address:
-              blank: "^Enter your email address"
+              blank: "^Enter an email address"
             organisation:
               blank: "^Enter their organisation"
             reason:
-              blank: "^Why do they need access?"
+              blank: "^Enter why they need access"
   errors:
     messages:
       email: "^Enter an email address in the correct format, like name@example.com"
