Add new fields to filter
Fields are rendered contextually using the filter and filter labels. 
I've also added in some contextual rendering to hide blank filter tags 
if search only uses one field. Likewise with removing tags.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,8 @@ en:
           index: "Data exports"
     filter:
       providers:
-        text_search: "Name or code"
+        provider_search: "Provider name or code"
+        course_search: "Course code"
       allocations:
         text_search: "Name or code"
       users:
@@ -106,7 +107,7 @@ en:
               blank: "is missing"
         course:
           attributes:
-            course_code: 
+            course_code:
               taken: "Course code is already taken"
               blank: "Course code cannot be blank"
             level:
