--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -212,3 +212,6 @@ en:
       detail: "Something has gone wrong, please try again in a few minutes"
   pagy:
     overflow: "The requested page param was out of range and invalid for this request."
+  success:
+    published: "Your changes have been published."
+    changes_ttl: "Changes will appear on Find postgraduate teacher training within 15 minutes."
