Improve application layout
- Add before_content block like we have in Old Publish, so view
  templates can inject back links
- Ensure we have an error prefix in the window title
- Ensure we have the service name in the window title

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,8 @@ en:
       sign_out: "Sign out"
   cancel: "Cancel"
   change: "Change"
+  page_titles:
+    error_prefix: "Error: "
   components:
     page_titles:
       sign_in:
