Adjust service name in header
By default, use "Publish teacher training courses". For the support
interface, stick to the existing "Teacher Training API Admin".

We can adjust the latter once Publish and TTAPI are merged.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
-  service_name: "Teacher Training API Admin"
-  publish_service_name: "Publish teacher training"
+  service_name: "Publish teacher training courses"
+  support_service_name: "Teacher training API Admin"
   header:
     items:
       sign_out: "Sign out"
