[441] Move filter_label to downstream views due to multiple labels

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,7 +45,7 @@ en:
         text_search: "Name or code"
       users:
         text_search: "Name or email"
-        user_type: "Filter by User type"
+        user_type: "User type"
         user_types:
           admin: "Admin User"
           provider: "Provider User"
