[481] Migrate visa sponsorships

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -224,4 +224,5 @@ en:
     overflow: "The requested page param was out of range and invalid for this request."
   success:
     published: "Your changes have been published."
+    saved: "Your changes have been saved."
     changes_ttl: "Changes will appear on Find postgraduate teacher training within 15 minutes."
