[499] Add locations list to providers tab in support console

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,8 @@ en:
           courses:
             index: "Courses"
             edit: "Edit course details"
+          locations:
+            index: "Locations"
         users:
           index: "Users"
           show: "User overview"
