--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
   header:
     items:
       sign_out: "Sign out"
-  cancel: "Cancel"
+  cancel: "Cancel and return to record"
   change: "Change"
   page_titles:
     error_prefix: "Error: "
@@ -24,6 +24,7 @@ en:
             edit: "Edit course details"
           locations:
             index: "Locations"
+            edit: "Edit location details"
         users:
           index: "Users"
           show: "User overview"
@@ -77,6 +78,9 @@ en:
         users:
           name: "Only users affiliated with a provider"
           description: "The list of all users affiliated with a provider from current recruitment cycle with columns: provider_code, provider_name, provider_type, first_name, last_name, email_address"
+    flash:
+      updated: "Record successfully updated"
+    update_record: "Update record"
   activerecord:
     attributes:
       course:
