--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
   header:
     items:
       sign_out: "Sign out"
-  cancel: "Cancel and return to record"
+  cancel: "Cancel"
   change: "Change"
   page_titles:
     error_prefix: "Error: "
@@ -79,8 +79,8 @@ en:
           name: "Only users affiliated with a provider"
           description: "The list of all users affiliated with a provider from current recruitment cycle with columns: provider_code, provider_name, provider_type, first_name, last_name, email_address"
     flash:
-      updated: "Record successfully updated"
-    update_record: "Update record"
+      updated: "%{resource} successfully updated"
+    update_record: "Update"
   activerecord:
     attributes:
       course:
