--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   service_name: "Publish teacher training courses"
-  support_service_name: "Teacher training API Admin"
+  support_service_name: "Teacher Training API Admin"
   header:
     items:
       sign_out: "Sign out"
