Migrate create/update form for Locations from Old Publish
These are called Sites in the data model and Locations in the UI. This
change implements the create/update flow for this resource.

- Port across view template from Old Publish and update as required
- Introduce LocationsForm object to handle site persistence
- Update postcode validator to accept custom messages
- Make slight tweaks to authorization policies to reflect the different
  kinds of authorization we want to conduct for create vs update

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,9 @@
 en:
+  helpers:
+    hint:
+      site:
+        urn_html: |-
+          Find URNs on <a class="govuk-link" href="https://www.get-information-schools.service.gov.uk" target="_blank">Get information about schools (opens in new tab)</a>
   service_name: "Publish teacher training courses"
   support_service_name: "Teacher Training API Admin"
   header:
