--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -230,6 +230,21 @@ en:
               blank: "^Enter their organisation"
             reason:
               blank: "^Enter why they need access"
+  activemodel:
+    errors:
+      models:
+        publish_interface/access_request_form:
+          attributes:
+            first_name:
+              blank: "Enter a first name"
+            last_name:
+              blank: "Enter a last name"
+            email_address:
+              blank: "Enter an email address"
+            organisation:
+              blank: "Enter their organisation"
+            reason:
+              blank: "Enter why they need access"
   errors:
     messages:
       email: "^Enter an email address in the correct format, like name@example.com"
