[563] Migrate course outcome page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,77 @@ en:
   change: "Change"
   page_titles:
     error_prefix: "Error: "
+  edit_options:
+    entry_requirements:
+      must_have_qualification_at_application_time:
+        label: "1. Must have the GCSE (least flexible)"
+        help: "You won’t receive applications from anyone without the GCSE, or from anyone who needs to take an equivalency test - UCAS will block these applications."
+        details_label: "Must have the GCSE (least flexible)"
+      expect_to_achieve_before_training_begins:
+        label: "2: Taking the GCSE"
+        help: "You will consider applicants with a pending GCSE. But UCAS will block applications from anyone who needs to take an equivalency test."
+        details_label: "Taking the GCSE"
+      equivalence_test:
+        label: "3: Equivalency test (most flexible)"
+        help: "You will consider applicants who need to take an equivalency test, as well as those with a pending GCSE."
+        details_label: "Equivalency test (most flexible)"
+      not_required:
+        details_label: "No requirement"
+        help: "You will receive applications from candidates who will not have a grade C (or 4) or above."
+    qualifications:
+      qts:
+        label: "QTS"
+        help: "Qualified teacher status"
+      pgce:
+        label: "PGCE only (without QTS)"
+        help: "Postgraduate certificate in education"
+      pgce_with_qts:
+        label: "PGCE with QTS"
+        help: "Postgraduate certificate in education with qualified teacher status"
+      pgde:
+        label: "PGDE only (without QTS)"
+        help: "Postgraduate diploma in education"
+      pgde_with_qts:
+        label: "PGDE with QTS"
+        help: "Postgraduate diploma in education with qualified teacher status"
+    age_range_in_years:
+      other:
+        label: "Another age range"
+      3_to_7:
+        label: "3 to 7"
+      5_to_11:
+        label: "5 to 11"
+      7_to_11:
+        label: "7 to 11"
+      7_to_14:
+        label: "7 to 14 (middle years)"
+      11_to_16:
+        label: "11 to 16"
+      11_to_18:
+        label: "11 to 18"
+      14_to_19:
+        label: "14 to 19"
+    study_modes:
+      part_time:
+        label: "Part time"
+      full_time:
+        label: "Full time"
+      full_time_or_part_time:
+        label: "Full time or part time"
+    apprenticeship:
+      pg_teaching_apprenticeship:
+        label: "Yes"
+      higher_education_programme:
+        label: "No"
+      scitt_programme:
+        label: "No"
+    fee_or_salary:
+      pg_teaching_apprenticeship:
+        label: "Teaching apprenticeship (with salary)"
+      school_direct_training_programme:
+        label: "Fee paying (no salary)"
+      school_direct_salaried_training_programme:
+        label: "Salaried"
   components:
     page_titles:
       sign_in:
