--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -356,6 +356,15 @@ en:
           attributes:
             site_ids:
               no_locations: "Select at least one location"
+        publish/course_requirement_form:
+          attributes:
+            required_qualifications:
+              blank: "Enter details about the qualifications needed"
+              too_long: "Reduce the word count for required qualifications"
+            personal_qualities:
+              too_long: "Reduce the word count for personal qualities"
+            other_requirements:
+              too_long: "Reduce the word count for other requirements"
   errors:
     messages:
       email: "^Enter an email address in the correct format, like name@example.com"
