--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,7 @@
 en:
+  age_range:
+    errors:
+      to_invalid_error: "Enter a valid age in To"
   helpers:
     hint:
       site:
@@ -441,4 +444,4 @@ en:
   date:
     formats:
       default: "%-d %B %Y"
-      short: "%B %Y"  
+      short: "%B %Y"
