--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -312,13 +312,15 @@ en:
               blank: "Enter an age in From"
               not_a_number: "Enter a valid age in From"
               not_an_integer: "Enter a valid age in From"
-              inclusion: "From age must be between 0 and 46"
+              greater_than_or_equal_to: "From age must be between 0 and 46"
+              less_than_or_equal_to: "From age must be between 0 and 46"
               invalid: "Enter a valid age in From"
             course_age_range_in_years_other_to:
               blank: "Enter an age in To"
               not_a_number: "Enter a valid age in To"
               not_an_integer: "Enter a valid age in To"
-              inclusion: "To age must be between 4 and 50"
+              greater_than_or_equal_to: "To age must be between 4 and 50"
+              less_than_or_equal_to: "To age must be between 4 and 50"
               invalid: "Enter a valid age in To"
         publish/access_request_form:
           attributes:
