--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -304,6 +304,24 @@ en:
   activemodel:
     errors:
       models:
+        publish/age_range_form:
+          attributes:
+            age_range_in_years:
+              blank: "You need to pick an age range"
+            course_age_range_in_years_other_from:
+              blank: "Enter an age in From"
+              not_a_number: "Enter a valid age in From"
+              not_an_integer: "Enter a valid age in From"
+              greater_than_or_equal_to: "From age must be between 0 and 46"
+              less_than_or_equal_to: "From age must be between 0 and 46"
+              invalid: "Enter a valid age in From"
+            course_age_range_in_years_other_to:
+              blank: "Enter an age in To"
+              not_a_number: "Enter a valid age in To"
+              not_an_integer: "Enter a valid age in To"
+              greater_than_or_equal_to: "To age must be between 4 and 50"
+              less_than_or_equal_to: "To age must be between 4 and 50"
+              invalid: "Enter a valid age in To"
         publish/access_request_form:
           attributes:
             first_name:
@@ -454,4 +472,5 @@ en:
   date:
     formats:
       default: "%-d %B %Y"
-      short: "%B %Y"  
+      short: "%B %Y"
+
