[828] Port over course deletion flow

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -391,6 +391,10 @@ en:
           attributes:
             confirm_course_code:
               invalid_code: "Enter the course code %{course_code} to withdraw this course"
+        publish/course_deletion_form:
+          attributes:
+            confirm_course_code:
+              invalid_code: "Enter the course code %{course_code} to delete this course"
   errors:
     messages:
       email: "^Enter an email address in the correct format, like name@example.com"
