Create title_bar view component
- Add custom CSS to render in line and add padding
- Add view preview

WIP

Appease rubocop

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,7 @@ en:
       sign_out: "Sign out"
   cancel: "Cancel"
   change: "Change"
+  change_organisation: "Change organisation"
   page_titles:
     error_prefix: "Error: "
   publish_authentication:
