--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,12 +211,12 @@ en:
         site:
           attributes:
             location_name:
-              blank: "^Enter a name"
+              blank: "Enter a name"
               taken: "is in use by another location"
             address1:
-              blank: "^Enter a building and street"
+              blank: "Enter a building and street"
             postcode:
-              blank: "^Enter a postcode"
+              blank: "Enter a postcode"
         course:
           attributes:
             course_code:
@@ -286,6 +286,8 @@ en:
           attributes:
             provider_name:
               too_long: "Enter a provider name that is 100 characters or fewer"
+            provider_code:
+              blank: "Enter code"
             email:
               blank: "^Enter email address"
             website:
