--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,6 +289,7 @@ en:
               blank: "Enter provider name"
             provider_code:
               blank: "Enter provider code"
+              taken: "Provider code already taken"
             email:
               blank: "^Enter email address"
             website:
