--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,8 @@ en:
   change_organisation: "Change organisation"
   page_titles:
     error_prefix: "Error: "
+    rollover:
+      show: "Recruitment cycles"
   publish_authentication:
     magic_link:
       invalid_token: "Magic link could not be verified, please request a new one"
