--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,12 @@ en:
         user_types:
           admin: "Admin User"
           provider: "Provider User"
+    course:
+      financial_incentives:
+        none: "None available"
+        not_yet_available: "Information not yet available"
+        bursary_and_scholarship: "Scholarships of %{scholarship} and bursaries of %{bursary_amount} are available"
+        bursary: "Bursaries of %{amount} available"
   course:
     update_email:
       name: "title"
