--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -332,6 +332,8 @@ en:
   activemodel:
     errors:
       models:
+        publish/course_rollover_form:
+          course_is_draft: "Course must have draft status."
         publish/age_range_form:
           attributes:
             age_range_in_years:
