Add user_form unit tests
And amend error message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -388,6 +388,7 @@ en:
           attributes:
             email:
               blank: "Enter an email address"
+              lowercase: "Enter an email address that is lowercase, like name@example.com"
             first_name:
               blank: "Enter a first name"
             last_name:
