Add edit provider user journey
Add view, route, controller method and specs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -196,6 +196,7 @@ en:
         last_name: "Last name"
         email: "Email address"
         new: "Add user"
+        edit: "Update user"
         check: "Check your answers"
     flash:
       created: "%{resource} successfully created"
