--- a/config/locales/find.yml
+++ b/config/locales/find.yml
@@ -3,6 +3,12 @@ en:
     homepage:
       title: Find courses by location or by training provider
       radio_options:
-        by_city_town_postcode: By city, town or postcode
-        across_england: Across England
-        by_school_uni_or_provider: By school, university or other training provider
+        by_city_town_postcode:
+          radio: By city, town or postcode
+          text_field: Postcode, town or city
+        across_england:
+          radio: Across England
+        by_school_uni_or_provider:
+          radio: By school, university or other training provider
+          text_field: School, university or other training provider
+          hint_text: Enter the name or provider code
