--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -598,3 +598,4 @@ en:
     url_get_an_advisor: https://adviser-getintoteaching.education.gov.uk
     url_online_chat: https://getintoteaching.education.gov.uk/#talk-to-us
     url_ways_to_train: https://getintoteaching.education.gov.uk/ways-to-train
+    url: https://getintoteaching.education.gov.uk
