--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -357,6 +357,14 @@ en:
   activemodel:
     errors:
       models:
+        find/courses_by_location_or_training_provider_form:
+          attributes:
+            find_courses:
+              blank: "Select an option to find courses"
+            city_town_postcode_query:
+              blank: "Enter a city, town or postcode"
+            school_uni_or_provider_query:
+              blank: "Enter a school, university or other training provider"
         publish/course_rollover_form:
           attributes:
             course_is_rollable:
