--- a/config/locales/find.yml
+++ b/config/locales/find.yml
@@ -12,3 +12,18 @@ en:
           radio: By school, university or other training provider
           text_field: School, university or other training provider
           hint_text: Enter the name or provider code
+  activemodel:
+    errors:
+      models:
+        find/age_groups_form:
+          attributes:
+            age_group:
+              blank: "Select an age group"
+        find/courses_by_location_or_training_provider_form:
+          attributes:
+            find_courses:
+              blank: "Select an option to find courses"
+            city_town_postcode_query:
+              blank: "Enter a city, town or postcode"
+            school_uni_or_provider_query:
+              blank: "Enter a school, university or other training provider"
