--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,7 +117,7 @@ en:
         label: "No"
       scitt_programme:
         label: "No"
-    fee_or_salary:
+    funding_type:
       pg_teaching_apprenticeship:
         label: "Teaching apprenticeship (with salary)"
       school_direct_training_programme:
@@ -587,7 +587,7 @@ en:
         label: "No"
       scitt_programme:
         label: "No"
-    fee_or_salary:
+    funding_type:
       pg_teaching_apprenticeship:
         label: "Teaching apprenticeship (with salary)"
       school_direct_training_programme:
